Fixing width of Case study stats block on ie

--- a/content/themes/igcp/inc/scss/ie.scss
+++ b/content/themes/igcp/inc/scss/ie.scss
@@ -61,5 +61,13 @@
       }
     }
 
+    // Case Study Stats
+    .cst-Stats {
+      @include break-min($md) {
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+
   }
 }
